[project]
name = "clickup-mcp"
version = "0.1.0"
description = "A Model Context Protocol (MCP) server that provides integration with ClickUp's API, allowing you to retrieve task information and manage ClickUp data through MCP-compatible clients."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.12.3",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
]
